@@ -75,6 +75,10 @@ $ spec failing_examples/big_string_spec.rb --diff
 If you want to use the <tt>--diff</tt> option, you must also gem install diff-lcs. You
 do *not* need a native diff command line tool, so this is Windows-friendly.
 
+h3. -s, --color, --colour
+
+Show coloured (red/green) output.
+
 h3. -s, --spec &lt;name of context and/or specification&gt;
 
 Enter the name of a context, spec, or both to run:
